# cmake-learn-note

./: .gitignore  .gitmodules  README.md
lesson_0_1/: CMakeLists.txt  main.cpp
lesson_0_1/add/: CMakeLists.txt  add.cpp
lesson_0_1/lib/: add.h
lesson_1/add/: CMakeLists.txt  add.cpp  add.h
lesson_1/calculator/: calculator.cpp
lesson_1/common/: common.cpp  common.h
lesson_1/sub/: sub.cpp  sub.h
lesson_2/: CMakeLists.txt  main.cpp
lesson_2/add/: CMakeLists.txt  add.cpp
lesson_2/calculator/: CMakeLists.txt  calculator.cpp  calculator.h
lesson_2/common/: CMakeLists.txt
lesson_2/sub/: CMakeLists.txt
lesson_3/: CMakeLists.txt  build.sh
lesson_3/calculator/: CMakeLists.txt  calculator.cpp  calculator.h
lesson_3/common/: CMakeLists.txt
lesson_3/sub/: sub.cpp  sub.h
lesson_3/test/: CMakeLists.txt  test_calculator.cpp
